<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_blue_grey_500_36dp"
            android:title="@string/prompt_notification"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_blue_grey_500_36dp"
            android:title="@string/prompt_setting"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_blue_grey_500_36dp"
            android:title="@string/prompt_history"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_blue_grey_500_36dp"
            android:title="@string/prompt_logout"/>
    </group>

    <item android:title="@string/prompt_versoin">
        <menu>
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_info_blue_grey_500_36dp"
                android:title="@string/prompt_version"/>
        </menu>
    </item>

</menu>