<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <include layout="@layout/include_toolbar"></include>
    <com.tesmple.crowdsource.view.ImageLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_loginactivity"/>
    </com.tesmple.crowdsource.view.ImageLinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:lineSpacingMultiplier="1.2"
            android:layout_height="wrap_content"
            android:text="@string/prompt_confirm_successfully"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:layout_marginTop="56dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lasttime"
            android:layout_marginRight="16dp"/>
        <TextView
            android:id="@+id/confirm_successfully_tv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_hour"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>
        <TextView
            android:id="@+id/confirm_successfully_tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_minutes"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute" />
        <TextView
            android:id="@+id/confirm_successfully_tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_second"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"/>
    </LinearLayout>
</LinearLayout>