<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tesmple.crowdsource.view.ImageLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_failed"/>
            </com.tesmple.crowdsource.view.ImageLinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/prompt_confirmer_remove_bill"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/tv_lasttime"/>

                <TextView
                    android:id="@+id/confirmer_remove_bill_tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_hour"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"/>

                <TextView
                    android:id="@+id/confirmer_remove_bill_tv_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_minutes"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"/>

                <TextView
                    android:id="@+id/confirmer_remove_bill_tv_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_second"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.tesmple.crowdsource.view.ButtonRectangle
                    android:id="@+id/confirmer_remove_bill_to_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:text="@string/prompt_to_publish">

                </com.tesmple.crowdsource.view.ButtonRectangle>

                <com.tesmple.crowdsource.view.ButtonRectangle
                    android:id="@+id/confirmer_remove_bill_not_to_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:text="@string/prompt_to_rob_bill">

                </com.tesmple.crowdsource.view.ButtonRectangle>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>