<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:clickable="true"
        android:id="@+id/accepted_bill_cv_bill"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/accepted_bill_sdv_head_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fresco:actualImageScaleType="fitCenter"
                    android:background="@drawable/ic_account_circle_blue_grey_500_48dp"
                    fresco:roundAsCircle="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/accepted_bill_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/accepted_bill_tv_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uestc"
                        android:textColor="@color/half_black"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_timer_black_36dp"/>

                    <TextView
                        android:id="@+id/accepted_bill_tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_actioning"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/accepted_bill_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:text="@string/test_bill_detail"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rmb"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp"/>

                        <TextView
                            android:id="@+id/accepted_bill_tv_award"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/test_award"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp"/>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/prompt_left_time"/>

                    <TextView
                        android:id="@+id/accepted_bill_tv_left_time_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_hour"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_hour"/>

                    <TextView
                        android:id="@+id/accepted_bill_tv_left_time_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_minutes"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_minutes"/>

                    <TextView
                        android:id="@+id/accepted_bill_tv_left_time_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_second"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_second"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
